--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -3,8 +3,12 @@ Django== 3.2.12
 django-filter==23.4
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.0
+gunicorn==21.2.0
 Markdown==3.4.4
 PyJWT==2.8.0
 pytz==2023.3.post1
 sqlparse==0.4.4
 typing-extensions==4.7.0
+
+
+
